--- a/drivers/staging/prima/Kconfig
+++ b/drivers/staging/prima/Kconfig
@@ -65,4 +65,8 @@ config QCOM_ESE_UPLOAD
 	bool "Enable ESE upload feature"
 	default n
 
+config WLAN_FEATURE_RX_WAKELOCK
+	bool "Enable RX wake lock feature"
+	default n
+
 endif # PRIMA_WLAN || PRONTO_WLAN
