qcom: core_ctl: Add core control driver
* Add support for core control module

Change-Id: I4ace1f69354dcbd26229517ed8ec237d312105e1

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -640,6 +640,11 @@ config MSM_TEST_PACMAN
 	  Low Speed Peripheral (BLSP) ownership transfer from one subsystem
 	  to another.
 
+config MSM_CORE_CTL
+	tristate "Core control module"
+	help
+	  Add support for the Qualcomm core control module
+
 config MSM_CORE_CTL_HELPER
 	tristate "Core control helper functions for dynamically hotplug CPUs"
 	help
