hiae: Enable core control module
Change-Id: Ic0c6db76357aec881261fa21248e63a8d1aa0adf

--- a/arch/arm64/configs/cyanogenmod_hiae_defconfig
+++ b/arch/arm64/configs/cyanogenmod_hiae_defconfig
@@ -3763,6 +3763,7 @@ CONFIG_MSM_XPU_ERR_FATAL=y
 # CONFIG_QCOM_EARLY_RANDOM is not set
 CONFIG_MSM_PACMAN=y
 CONFIG_MSM_TEST_PACMAN=y
+CONFIG_MSM_CORE_CTL=m
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
