--- a/arch/arm64/configs/cyanogenmod_hiae_defconfig
+++ b/arch/arm64/configs/cyanogenmod_hiae_defconfig
@@ -272,7 +272,6 @@ CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
 CONFIG_POWER_KEY_CLR_RESET=y
 CONFIG_INPUT_KEYRESET=y
 CONFIG_KEYBOARD_GPIO=y
@@ -285,7 +284,7 @@ CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_GPIO=m
+CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_DUMMY_KEYPAD=y
 CONFIG_AK8789_HALLSENSOR=y
 # CONFIG_SERIO_I8042 is not set
@@ -302,7 +301,6 @@ CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_INPUT_CWSTM32=y
@@ -315,7 +313,6 @@ CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SOUNDWIRE=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=m
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
@@ -371,6 +368,7 @@ CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
+# CONFIG_USB_GSPCA is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_MSMB_CAMERA=y
 CONFIG_MSM_CAMERA_SENSOR=y
@@ -492,7 +490,6 @@ CONFIG_IPA=y
 CONFIG_RMNET_IPA=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_BUS_SCALING=y
-CONFIG_MSM_BUSPM_DEV=m
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_QPNP_HAPTIC=y
 CONFIG_SEEMP_CORE=y
@@ -506,8 +503,6 @@ CONFIG_IIO_BUFFER=y
 CONFIG_IIO_KFIFO_BUF=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
-CONFIG_MOBICORE_SUPPORT=m
-CONFIG_MOBICORE_API=m
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_SENSORS=y
 CONFIG_SENSORS_SSC=y
@@ -571,7 +566,6 @@ CONFIG_EXT4_E2FSCK_RECOVER=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
-CONFIG_ECRYPT_FS=m
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_RAM=y
@@ -623,6 +617,7 @@ CONFIG_CRYPTO_CTR=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_TWOFISH=y
+CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
