--- a/arch/arm64/configs/cyanogenmod_hiae_defconfig
+++ b/arch/arm64/configs/cyanogenmod_hiae_defconfig
@@ -542,6 +542,7 @@ CONFIG_MSM_SCM=y
 CONFIG_MSM_XPU_ERR_FATAL=y
 CONFIG_MSM_PACMAN=y
 CONFIG_MSM_TEST_PACMAN=y
+CONFIG_MSM_CORE_CTL=m
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
