hiae: Disable HTC debugging code
Change-Id: Icfe9542ba2a0a3643ce41f7b7cc7d264890c41cb

--- a/arch/arm64/configs/cyanogenmod_hiae_defconfig
+++ b/arch/arm64/configs/cyanogenmod_hiae_defconfig
@@ -39,7 +39,6 @@ CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
-CONFIG_HTC_POWER_DEBUG=y
 CONFIG_PREEMPT=y
 CONFIG_ARMV7_COMPAT=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -212,6 +211,8 @@ CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
 CONFIG_RMNET_DATA_DEBUG_PKT=y
 CONFIG_SOCKEV_NLMCAST=y
+# CONFIG_HTC_NETWORK_MODIFY is not set
+# CONFIG_HTC_NET_DEBUG is not set
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
@@ -569,9 +570,14 @@ CONFIG_MSM_TZ_LOG=y
 CONFIG_HTC_DEBUG_RAMOOPS=y
 CONFIG_HTC_DEBUG_BOOTLOADER_LOG=y
 CONFIG_HTC_NC_GPIO_PIN_SETTING=y
+# CONFIG_HTC_PROCESS_DEBUG is not set
+# CONFIG_HTC_DEBUG_DYING_PROCS is not set
 CONFIG_HTC_REBOOT_BLOCK=y
 CONFIG_HTC_RADIO_SMEM=y
 CONFIG_HTC_MODEM_NOTIFIER=y
+# CONFIG_HTC_DEBUG_RIL_PCN0005_HTC_DUMP_SMSM_LOG is not set
+# CONFIG_HTC_DEBUG_RIL_PCN0010_HTC_DUMP_IPCROUTER_LOG is not set
+# CONFIG_HTC_DEBUG_RIL_PCN0011_HTC_DUMP_IPC_UNREAD_PACKAGE is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_E2FSCK_RECOVER=y
@@ -588,8 +594,7 @@ CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
-CONFIG_HTC_DEBUG_WATCHDOG=y
-CONFIG_HTC_DEBUG_SSR=y
+# CONFIG_HTC_DEBUG is not set
 CONFIG_HTC_FEATURES=y
 CONFIG_HTC_FEATURES_SSR=y
 CONFIG_HTC_FEATURES_SSR_MODEM_ENABLE=y
