--- a/arch/arm64/configs/lineage_hiae_defconfig
+++ b/arch/arm64/configs/lineage_hiae_defconfig
@@ -549,8 +549,7 @@ CONFIG_MSM_OCMEM_NONSECURE=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_XPU_ERR_FATAL=y
-CONFIG_MSM_CORE_CTL=m
-CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_MSM_CORE_CTL=y
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 CONFIG_MSM_VSENS=y
